--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <main class="first_block">
             <aside class="first_block--aside">
                 <div>
-                    <p>INSTAGRAM</p>
-                    <div></div>
+                    <p><a href="#">INSTAGRAM</a></p>
+                    <div class="first_block--aside-vector"></div>
                 </div>
             </aside>
             <section class="first_block--section">
                 <h2 class="first_block--section-title">Turnkey Repair in the city of <span class="first_block--section-name">Rostov-on-Don</span></h2>
                 <p class="first_block--section-text">
-                    Get ready-made turnkey repairs on time
-                    with work time saving up to 45 days and 20% from
-                    cost of materials due to the organization of work
+                    Get ready-made turnkey repairs on time <br />
+                    with work time saving up to 45 days and 20% from 
+                    cost of materials due to the organization of work 
                 </p>
                 <form>
                     <input type="submit" class="first_block--section-btn_left" value="CALCULATE THE COST" />
@@ -53,7 +53,6 @@
             <div class="first_block--scroll">
                 <p>SCROLL DOWN</p>
             </div>
-            <div class="first_block--footer"></div>
         </main>
 
         <!--левая картинка полупрозрачная отступ -174 влево
@@ -137,7 +136,7 @@
         </section>
         <section class="fourth_block_repair">
             <h2>Types of Repair</h2>
-            <div class="fourth_block_repair--icon"></div>            
+            <div class="fourth_block_repair--icon"></div>
             <div class="fourth_block_repair--types">
                 <div>
                     <div class="fourth_block_repair--types-img1"></div>
@@ -167,7 +166,7 @@
                             <li>Replacing plumbing</li>
                             <li>Replacing sockets and switches</li>
                             <li>Replacing doors</li>
-                        </ul>                        
+                        </ul>
                     </div>
                     <div class="fourth_block_repair--types-cost2">from 1800 rub / m2</div>
                 </div>
@@ -200,21 +199,21 @@
                         <p>Leave a request for free departure of the measurer</p>
                         <div>
                             <label>Name</label>
-                            <input type="text" value="What is your name:"/>
+                            <input type="text" value="What is your name:" />
                         </div>
                         <div>
                             <label>Phone</label>
-                            <input type="text" value="Your phone number:"/>
+                            <input type="text" value="Your phone number:" />
                         </div>
                         <div>
                             <label>Email</label>
-                            <input type="text" value="Your email"/>
+                            <input type="text" value="Your email" />
                         </div>
                         <div>
                             <lable>I agree to the processing of personal data</lable>
                             <input type="checkbox" checked />
                         </div>
-                        <input type="submit" value="CALL THE MEASURER"/>
+                        <input type="submit" value="CALL THE MEASURER" />
                     </form>
                     <div class="fourth_block_repair--cell_measurer-form-icon">
                         <p>Help save 10 - 20% of the cost of materials</p>
@@ -252,10 +251,10 @@
         <section class="sixth_block_design">
             <h2 class="sixth_block_design--title">design project</h2>
             <div class="sixth_block_design--icon"></div>
-            <p  class="sixth_block_design--text">
+            <p class="sixth_block_design--text">
                 Design project not only helps to make the repair of your apartment more modern,
                 but also significantly reduces the cost of materials and reduces the time of repair work.
-            </p>            
+            </p>
             <section class="sixth_block_design--options">
                 <div class="sixth_block_design--options-types">
                     <div>
@@ -342,7 +341,7 @@
         </section>
         <section class="seventh_block_team">
             <h2 class="seventh_block_team--title">our team</h2>
-            <div class="seventh_block_team--icon"></div> 
+            <div class="seventh_block_team--icon"></div>
             <p class="seventh_block_team--text">
                 Our team has helped to become happier for more than
                 500 families and we are not going to stop
@@ -447,7 +446,7 @@
                     </p>
                     <p class="eighth_block_clients--clients-data1">56 M2</p>
                     <p class="eighth_block_clients--clients-data2">86 DAYS</p>
-                </div>  
+                </div>
             </div>
         </section>
         <section class="ninth_block_questions">
