--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         -->
         <div class="second_block_completed">
             <section class="second_block_completed--section">
-                <div>
-                    <h2>Completed projects</h2>
+                <div class="second_block_completed--section-title">
+                    <h2>Completed projects</h2>                    
                     <div></div>
                 </div>
                 <p class="second_block_completed--section-text">
@@ -72,25 +72,25 @@
                 <div class="second_block_completed--section-row1">
                     <div>
                         <h3>City:</h3>
-                        <p class="second_block_completed--section-info">Rostov-on-Don LCD admiral</p>
+                        <p>Rostov-on-Don LCD admiral</p>
                     </div>
                     <div>
                         <h3>apartment area:</h3>
-                        <p class="second_block_completed--section-info">81 m2</p>
+                        <p>81 m2</p>
                     </div>
                 </div>
-                <div class="second_block_completed--section-row1">
+                <div class="second_block_completed--section-row2">
                     <div>
                         <h3>Repair time:</h3>
-                        <p class="second_block_completed--section-info">3.5 months</p>
+                        <p>3.5 months</p>
                     </div>
                     <div>
                         <h3>Repair Cost:</h3>
-                        <p class="second_block_completed--section-info">Upon request</p>
+                        <p>Upon request</p>
                     </div>
                 </div>
                 <div class="second_block_completed--section-arrows"></div>
-            </section>
+            </section>            
             <div class="second_block_completed--r_section">
                 <nav>
                     <ul class="second_block_completed--r_section-nav">
