repair-design-project/feat: markup of fourth_block_types

--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
             </form>
         </section>
         <section class="fourth_block_repair">
-            <h2>Types of Repair</h2>
-            <div class="fourth_block_repair--icon"></div>
+            <h2 class="fourth_block_repair--title">Types of Repair</h2>            
             <div class="fourth_block_repair--types">
                 <div>
                     <div class="fourth_block_repair--types-img1"></div>
-                    <div class="fourth_block_repair--types-list1">
+                    <div class="fourth_block_repair--types-list">
                         <h3>Redecorating</h3>
                         <ul>
                             <li>Dismantling of old coatings</li>
@@ -147,12 +146,12 @@
                             <li>Replacing sockets and switches</li>
                             <li>Replacing doors</li>
                         </ul>
-                    </div>
-                    <div class="fourth_block_repair--types-cost1">from 900 rub / m2</div>
+                        <div class="fourth_block_repair--types-list-cost">from 900 rub / m2</div>
+                    </div>                    
                 </div>
                 <div>
                     <div class="fourth_block_repair--types-img2"></div>
-                    <div class="fourth_block_repair--types-list2">
+                    <div class="fourth_block_repair--types-list">
                         <h3>Overhaul</h3>
                         <ul>
                             <li>Dismantling of old coatings</li>
@@ -163,12 +162,12 @@
                             <li>Replacing sockets and switches</li>
                             <li>Replacing doors</li>
                         </ul>
-                    </div>
-                    <div class="fourth_block_repair--types-cost2">from 1800 rub / m2</div>
+                        <div class="fourth_block_repair--types-list-cost">from 1800 rub / m2</div>
+                    </div>                    
                 </div>
                 <div>
                     <div class="fourth_block_repair--types-img3"></div>
-                    <div class="fourth_block_repair--types-list3">
+                    <div class="fourth_block_repair--types-list">
                         <h3>Designer Repair</h3>
                         <ul>
                             <li>Dismantling of old coatings</li>
@@ -179,8 +178,8 @@
                             <li>Replacing sockets and switches</li>
                             <li>Replacing doors</li>
                         </ul>
-                    </div>
-                    <div class="fourth_block_repair--types-cost3">from 4000 rub / m2</div>
+                        <div class="fourth_block_repair--types-list-cost">from 4000 rub / m2</div>
+                    </div>                    
                 </div>
             </div>
             <div class="fourth_block_repair--cell_measurer">
