repair-design-project/feat: markup of fourth_block_measurer

--- a/index.html
+++ b/index.html
@@ -183,34 +183,51 @@
                 </div>
             </div>
             <div class="fourth_block_repair--cell_measurer">
-                <ol>
-                    <li>Our specialist will arrive for measurements per day contact, or appoint a date convenient for you</li>
-                    <li>Free metering</li>
-                    <li>Free consultation</li>
-                    <li>Get a cost estimate and the timing of your future repairs</li>
-                </ol>
-                <div class="fourth_block_repair--cell_measurer-form">
-                    <form>
-                        <p>Leave a request for free departure of the measurer</p>
+                <ul>
+                    <li>
+                        <span>01</span>
+                        <a>
+                            Our specialist will arrive for measurements per day
+                            contact, or appoint a date convenient for you
+                        </a>
+                    </li>
+                    <li><span>02</span>Free metering</li>
+                    <li><span>03</span>Free consultation</li>
+                    <li>
+                        <span>04</span>
+                        <a>Get a cost estimate and</a>
+                        <a>the timing of your future repairs</a>
+                    </li>
+                </ul>
+                <div class="fourth_block_repair--cell_measurer-r_section">
+                    <form class="fourth_block_repair--cell_measurer-r_section-form">
                         <div>
-                            <label>Name</label>
-                            <input type="text" value="What is your name:" />
+                            <p>Leave a request for free departure of the measurer</p>
                         </div>
-                        <div>
-                            <label>Phone</label>
-                            <input type="text" value="Your phone number:" />
+                        <div class="fourth_block_repair--cell_measurer-r_section-form-inputs">
+                            <div>
+                                <label>Name</label>
+                                <input type="text" value="What is your name:" />
+                            </div>
+                            <div>
+                                <label>Phone</label>
+                                <input type="text" value="Your phone number:" />
+                            </div>
+                            <div>
+                                <label>Email</label>
+                                <input type="text" value="Your email" />
+                            </div>
+                            <div>
+                                <label class="third_block_control--form-check">
+                                    <input type="checkbox" required />
+                                    <span class="third_block_control--form-check-box"></span>
+                                    I agree to the processing of personal data
+                                </label>
+                            </div>
+                            <button>CALL THE MEASURER</button>
                         </div>
-                        <div>
-                            <label>Email</label>
-                            <input type="text" value="Your email" />
-                        </div>
-                        <div>
-                            <lable>I agree to the processing of personal data</lable>
-                            <input type="checkbox" checked />
-                        </div>
-                        <input type="submit" value="CALL THE MEASURER" />
                     </form>
-                    <div class="fourth_block_repair--cell_measurer-form-icon">
+                    <div class="fourth_block_repair--cell_measurer-r_section-form-icon">
                         <p>Help save 10 - 20% of the cost of materials</p>
                     </div>
                 </div>
