repair-design-project/feat: markup of sixth_block_design--types

--- a/index.html
+++ b/index.html
@@ -264,64 +264,63 @@
             </div>
         </section>
         <section class="sixth_block_design">
-            <h2 class="sixth_block_design--title">design project</h2>
-            <div class="sixth_block_design--icon"></div>
-            <p class="sixth_block_design--text">
-                Design project not only helps to make the repair of your apartment more modern,
-                but also significantly reduces the cost of materials and reduces the time of repair work.
-            </p>
-            <section class="sixth_block_design--options">
-                <div class="sixth_block_design--options-types">
-                    <div>
-                        <div class="sixth_block_design--options-types-img1"></div>
-                        <div class="sixth_block_design--options-types-list1">
-                            <h3>Redecorating</h3>
-                            <ul>
-                                <li>Dismantling of old coatings</li>
-                                <li>Wallpapering</li>
-                                <li>Painting walls and ceilings</li>
-                                <li>Laying flooring</li>
-                                <li>Replacing plumbing</li>
-                                <li>Replacing sockets and switches</li>
-                                <li>Replacing doors</li>
-                            </ul>
-                        </div>
-                        <div class="sixth_block_design--options-types-cost1">from 900 rub / m2</div>
-                    </div>
-                    <div>
-                        <div class="sixth_block_design--options-types-img2"></div>
-                        <div class="sixth_block_design--options-types-list2">
-                            <h3>Overhaul</h3>
-                            <ul>
-                                <li>Dismantling of old coatings</li>
-                                <li>Wallpapering</li>
-                                <li>Painting walls and ceilings</li>
-                                <li>Laying flooring</li>
-                                <li>Replacing plumbing</li>
-                                <li>Replacing sockets and switches</li>
-                                <li>Replacing doors</li>
-                            </ul>
-                        </div>
-                        <div class="sixth_block_design--options-types-cost2">from 1800 rub / m2</div>
-                    </div>
-                    <div>
-                        <div class="sixth_block_design--options-types-img3"></div>
-                        <div class="sixth_block_design--options-types-list3">
-                            <h3>Designer Repair</h3>
-                            <ul>
-                                <li>Dismantling of old coatings</li>
-                                <li>Wallpapering</li>
-                                <li>Painting walls and ceilings</li>
-                                <li>Laying flooring</li>
-                                <li>Replacing plumbing</li>
-                                <li>Replacing sockets and switches</li>
-                                <li>Replacing doors</li>
-                            </ul>
-                        </div>
-                        <div class="sixth_block_design--options-types-cost3">from 4000 rub / m2</div>
+            <h2 class="sixth_block_design--title">design project</h2>         
+            <div class="sixth_block_design--text">
+                <p>Design project not only helps to make the repair of your apartment more modern,</p>
+                <p>but also significantly reduces the cost of materials and reduces the time of repair work.</p>
+            </div>            
+            <section class="sixth_block_design--types">
+                <div>
+                    <div class="sixth_block_design--types-img1"></div>
+                    <div class="sixth_block_design--types-list1">
+                        <h3>Mini</h3>
+                        <ul>                               
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plumbing plan. equipment</li>                            
+                        </ul>
+                        <div class="sixth_block_design--types-list-cost">150 rub / m2</div>
                     </div>
                 </div>
-            </section>
+                <div>
+                    <div class="sixth_block_design--types-img2"></div>
+                    <div class="sixth_block_design--types-list2">
+                        <h3>Standard</h3>
+                        <ul>                             
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plan of ceilings</li>
+                            <li>Floor Plan</li>
+                            <li>Electricians plan</li>
+                            <li>Lighting plan</li>
+                        </ul>
+                        <div class="sixth_block_design--types-list-cost">400 rub / m2</div>
+                    </div>
+                </div>
+                <div>
+                    <div class="sixth_block_design--types-img3"></div>
+                    <div class="sixth_block_design--types-list3">
+                        <h3>Full</h3>
+                        <ul>
+                            <li>Measurement drawing</li>
+                            <li>Redevelopment</li>
+                            <li>Layout of furniture</li>
+                            <li>Plan of ceilings</li>
+                            <li>Floor Plan</li>
+                            <li>Electricians plan</li>
+                            <li>Lighting plan</li>
+                            <li>Wall reamers</li>
+                            <li>3D visualization</li>
+                            <li>Bill of materials</li>
+                            <li>Departure for a selection of materials</li>
+                            <li>Furniture selection</li>
+                        </ul>
+                        <div class="sixth_block_design--types-list-cost">900 rub / m2</div>
+                    </div>
+                </div>
+            </section>          
             <section class="sixth_block_design--work">
                 <div class="sixth_block_design--work-l_block">
                     <p class="sixth_block_design--work-l_block-about">How we are working</p>
