repair-design-project/feat: markup of sixth_block_design--work

--- a/index.html
+++ b/index.html
@@ -323,36 +323,64 @@
             </section>          
             <section class="sixth_block_design--work">
                 <div class="sixth_block_design--work-l_block">
-                    <p class="sixth_block_design--work-l_block-about">How we are working</p>
-                    <h2 class="sixth_block_design--work-l_block-title">6 steps to the goal</h2>
+                    <h2 class="sixth_block_design--work-l_block-about">How we are working</h2>
+                    <h3 class="sixth_block_design--work-l_block-title">6 steps to the goal</h3>
+                    <div class="sixth_block_design--work-l_block-vector"></div>
                     <p class="sixth_block_design--work-l_block-step">1/6</p>
-                    <h4 class="sixth_block_design--work-l_block-title2">Departure for measurements premises</h4>
-                    <p>
-                        After your call, we go to you to consult and measure the
-                        premises of your apartment. During our meeting, you can
-                        ask absolutely any number of questions. An
-                        appraiser-appraiser leaves to measure the room.
-                    </p>
-                    <p>
-                        He will advise you on the issues of repair technology,
-                        apartment design, terms of repair of the apartment as a
-                        whole and its individual stages.
-                    </p>
+                    <h4 class="sixth_block_design--work-l_block-title2">Departure for <br /> measurements premises</h4>
+                    <div class="sixth_block_design--work-l_block-text">
+                        <p>
+                            After your call, we go to you to consult and measure the
+                            premises of your apartment. During our meeting, you can
+                            ask absolutely any number of questions. An <br />
+                            appraiser-appraiser leaves to measure the room.
+                        </p>
+                        <p>
+                            He will advise you on the issues of repair technology,
+                            apartment design, terms of repair of the apartment as a
+                            whole and its individual stages.
+                        </p>
+                    </div>
                     <img src="source/images/block6/b6 arrows.png" class="sixth_block_design--work-l_block-icon" alt="">
                 </div>
                 <div class="sixth_block_design--work-r_block">
-                    <ol class="sixth_block_design--work-r_block-list">
-                        <li>Departure to room measurements</li>
-                        <li>Compilation estimates</li>
-                        <li>Development project design</li>
-                        <li>Purchasing Supplies</li>
-                        <li>Repair finishing work</li>
-                        <li>Acceptance and delivery of works</li>
-                    </ol>
-                    <img src="/source/images/block6/b6 img.png" alt="" />
+                    <div class="sixth_block_design--work-r_block-list1">
+                        <div class="sixth_block_design--work-r_block-list1-first">
+                            <span>01</span>
+                            <p>Departure to</p>
+                            <p>room measurements</p>
+                        </div>
+                        <div>
+                            <span>02</span>
+                            <p>Compilation</p>
+                            <p>estimates</p>
+                        </div>
+                        <div>
+                            <span>03</span>
+                            <p>Development</p>
+                            <p>project design</p>
+                        </div>
+                    </div>
+                    <div class="sixth_block_design--work-r_block-list2">
+                        <div>
+                            <span>04</span>
+                            <p>Purchasing Supplies</p>
+                        </div>
+                        <div>
+                            <span>05</span>
+                            <p>Repair finishing work</p>
+                        </div>
+                        <div>
+                            <span>06</span>
+                            <p>Acceptance and</p>
+                            <p>delivery of works</p>
+                        </div>
+                    </div>
+                    <img class="sixth_block_design--work-r_block-img" src="/source/images/block6/b6 img.png" alt="" />
                 </div>
-            </section>
+            </section>            
         </section>
+        <a href="javascript:window.open('http://localhost:61559/index.html', '','width=320,height=480')">Open!</a>
         <section class="seventh_block_team">
             <h2 class="seventh_block_team--title">our team</h2>
             <div class="seventh_block_team--icon"></div>
