repair-design-project/feat: markup of seventh_block_team

--- a/index.html
+++ b/index.html
@@ -379,11 +379,9 @@
                     <img class="sixth_block_design--work-r_block-img" src="/source/images/block6/b6 img.png" alt="" />
                 </div>
             </section>            
-        </section>
-        <a href="javascript:window.open('http://localhost:61559/index.html', '','width=320,height=480')">Open!</a>
+        </section>        
         <section class="seventh_block_team">
-            <h2 class="seventh_block_team--title">our team</h2>
-            <div class="seventh_block_team--icon"></div>
+            <h2 class="seventh_block_team--title">our team</h2>            
             <p class="seventh_block_team--text">
                 Our team has helped to become happier for more than
                 500 families and we are not going to stop
@@ -397,29 +395,21 @@
                     </div>
                 </div>
                 <div>
-                    <img src="source/images/block7/b7 icon img 2.png" alt="" />
-                    <img src="source/images/block7/b7 img 2.png" alt="" />
-                    <div>
-                        <p>Dmitry tulyakov</p>
-                        <p>Project manager</p>
-                    </div>
-                    <div>
-                        <p>Work experience 8 years</p>
+                    <div class="seventh_block_team--experts-descript2">
+                        <p>Larisa Kotlyarova</p>
+                        <p>Designer</p>
+                        <p>Work experience 6 years</p>
                     </div>
                 </div>
                 <div>
-                    <img src="source/images/block7/b7 icon img 3.png" alt="" />
-                    <img src="source/images/block7/b7 img 3.png" alt="" />
-                    <div>
-                        <p>Dmitry tulyakov</p>
-                        <p>Project manager</p>
-                    </div>
-                    <div>
-                        <p>Work experience 8 years</p>
+                    <div class="seventh_block_team--experts-descript3">
+                        <p>Alexey Efimov</p>
+                        <p>Foreman</p>
+                        <p>Work experience 12 years</p>
                     </div>
                 </div>
             </div>
-            <div class="seventh_block_team--vect"></div>
+            <div class="seventh_block_team--vect1"></div>
             <div class="seventh_block_team--vect2"></div>
             <p class="seventh_block_team--text2">
                 Each employee of our company is a qualified full-time specialist
@@ -491,6 +481,7 @@
                 </div>
             </div>
         </section>
+        <a href="javascript:window.open('http://localhost:61559/index.html', '','width=320,height=480')">Open!</a>
         <section class="ninth_block_questions">
             <div class="ninth_block_questions--any">
                 <h2 class="ninth_block_questions--any-title">have any questions?</h2>
