--- a/index.html
+++ b/index.html
@@ -422,7 +422,6 @@
         </section>
         <section class="eighth_block_clients">
             <h2 class="eighth_block_clients--title">our clients</h2>
-            <div class="eighth_block_clients--icon"></div>
             <p class="eighth_block_clients--text">80% of our customers recommend us to their friends and family.</p>
             <div class="eighth_block_clients--clients">
                 <div>
@@ -431,17 +430,17 @@
                         <h4 class="eighth_block_clients--clients-title-name">Fedosova Maria Konstantinovna</h4>
                     </div>
                     <p class="eighth_block_clients--clients-text">
-                        I want to thank the guys for their work. WE PUT YOUR
-                        SHOWER PART IN REPAIR. I am VERY grateful that I referred to
-                        the repair as to my own. GREAT THANKS I EXPRESS THE
-                        PROJECT TO GEORGIA FOR ITS PROFESSIONALISM AND APPROACH.
-                        THE REPAIR PROCESS WAS TURNED OUT IN TERMS, FASTER THAN
-                        ANTICIPATED. TEAM MOBILE AND PROFESSIONAL. WORKS
-                        PERFORMED QUALITATIVELY WITHOUT COMMENTS. QUALITY
-                        SATISFIED. PRICES DEMOCRATIC. I RECOMMEND THESE MASTERS.
+                        I want to thank the guys for their work. We put your
+                        shower part in repair. I am very grateful that I referred to
+                        the repair as to my own. Great thanks I express the
+                        project to georgia for its professionalism and approach.
+                        The pepair process was turned out in terms, faster than
+                        anticipated. Team mobile and professional. Works
+                        performed qualitatively without comments. Quality
+                        satisfied. Process democratic. I recommend these masters.
                     </p>
-                    <p class="eighth_block_clients--clients-data1">40 M2</p>
-                    <p class="eighth_block_clients--clients-data2">48 DAYS</p>
+                    <p class="eighth_block_clients--clients-data1"><span>40 M2</span></p>
+                    <p class="eighth_block_clients--clients-data2"><span>48 DAYS</span></p>
                 </div>
                 <div>
                     <div class="eighth_block_clients--clients-title">
@@ -449,17 +448,17 @@
                         <h4 class="eighth_block_clients--clients-title-name">Afanasyev Sergey Alexandrovich</h4>
                     </div>
                     <p class="eighth_block_clients--clients-text">
-                        I want to thank the guys for their work. WE PUT YOUR
-                        SHOWER PART IN REPAIR. I am VERY grateful that I referred to
-                        the repair as to my own. GREAT THANKS I EXPRESS THE
-                        PROJECT TO GEORGIA FOR ITS PROFESSIONALISM AND APPROACH.
-                        THE REPAIR PROCESS WAS TURNED OUT IN TERMS, FASTER THAN
-                        ANTICIPATED. TEAM MOBILE AND PROFESSIONAL. WORKS
-                        PERFORMED QUALITATIVELY WITHOUT COMMENTS. QUALITY
-                        SATISFIED. PRICES DEMOCRATIC. I RECOMMEND THESE MASTERS.
+                        I want to thank the guys for their work. We put your
+                        shower part in repair. I am very grateful that I referred to
+                        the repair as to my own. Great thanks I express the
+                        project to georgia for its professionalism and approach.
+                        The pepair process was turned out in terms, faster than
+                        anticipated. Team mobile and professional. Works
+                        performed qualitatively without comments. Quality
+                        satisfied. Process democratic. I recommend these masters.
                     </p>
-                    <p class="eighth_block_clients--clients-data1">90 M2</p>
-                    <p class="eighth_block_clients--clients-data2">128 DAYS</p>
+                    <p class="eighth_block_clients--clients-data1"><span>90 M2</span></p>
+                    <p class="eighth_block_clients--clients-data2"><span>128 DAYS</span></p>
                 </div>
                 <div>
                     <div class="eighth_block_clients--clients-title">
@@ -467,21 +466,20 @@
                         <h4 class="eighth_block_clients--clients-title-name">Kiriev Egor Leonidovich</h4>
                     </div>
                     <p class="eighth_block_clients--clients-text">
-                        I want to thank the guys for their work. WE PUT YOUR
-                        SHOWER PART IN REPAIR. I am VERY grateful that I referred to
-                        the repair as to my own. GREAT THANKS I EXPRESS THE
-                        PROJECT TO GEORGIA FOR ITS PROFESSIONALISM AND APPROACH.
-                        THE REPAIR PROCESS WAS TURNED OUT IN TERMS, FASTER THAN
-                        ANTICIPATED. TEAM MOBILE AND PROFESSIONAL. WORKS
-                        PERFORMED QUALITATIVELY WITHOUT COMMENTS. QUALITY
-                        SATISFIED. PRICES DEMOCRATIC. I RECOMMEND THESE MASTERS.
+                        I want to thank the guys for their work. We put your
+                        shower part in repair. I am very grateful that I referred to
+                        the repair as to my own. Great thanks I express the
+                        project to georgia for its professionalism and approach.
+                        The pepair process was turned out in terms, faster than
+                        anticipated. Team mobile and professional. Works
+                        performed qualitatively without comments. Quality
+                        satisfied. Process democratic. I recommend these masters.
                     </p>
-                    <p class="eighth_block_clients--clients-data1">56 M2</p>
-                    <p class="eighth_block_clients--clients-data2">86 DAYS</p>
+                    <p class="eighth_block_clients--clients-data1"><span>56 M2</span></p>
+                    <p class="eighth_block_clients--clients-data2"><span>86 DAYS</span></p>
                 </div>
             </div>
-        </section>
-        <a href="javascript:window.open('http://localhost:61559/index.html', '','width=320,height=480')">Open!</a>
+        </section>     
         <section class="ninth_block_questions">
             <div class="ninth_block_questions--any">
                 <h2 class="ninth_block_questions--any-title">have any questions?</h2>
@@ -509,8 +507,8 @@
                     </div>
                 </form>
             </div>
-            <div>
-                <h2 class="ninth_block_questions--title">
+            <div class="ninth_block_questions--title">
+                <h2>
                     Rostov-on-Don, Nansen St., 239 Shopping Center
                     Decorum Tel +7 (928) 768 32 29
                 </h2>
